# ebpf-demo

./: .gitignore  Cargo.toml  README.md  kubernetes.yaml
.vim/: coc-settings.json
ebpf-demo/: Cargo.toml
ebpf-demo-ebpf/src/: main.rs
ebpf-demo/src/: main.rs
infra/: install.sh
preso/: README.md
rust/: Dockerfile  kind.sh  kubernetes.yaml
rust-libbpf/: Cargo.toml  Dockerfile  build.rs  cross.Dockerfile  kind.sh  kubernetes.yaml
rust-libbpf/localbin/: rust-libbpf
rust-libbpf/src/: main.rs
rust-libbpf/src/bpf/: syscall.bpf.c  syscall.skel.rs
rust/ebpf-demo-common/: Cargo.toml
rust/ebpf-demo-common/src/: lib.rs
rust/ebpf-demo-ebpf/: Cargo.toml
rust/ebpf-demo-ebpf/src/: bindings.rs  main.rs
rust/ebpf-demo/src/: main.rs
rust/xtask/src/: codegen.rs  run.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  codegen.rs
