[package]
name = "ebpf-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
ebpf-demo-common = { path = "../ebpf-demo-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
log = "0.4"
bytes = "1.3"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
procfs= "0.16.0-RC1"

[[bin]]
name = "ebpf-demo"
path = "src/main.rs"
