[package]
name = "rust-libbpf"
version = "0.1.0"
license = "LGPL-2.1-only OR BSD-2-Clause"
edition = "2021"

[build-dependencies]
libbpf-cargo = "0.23.3"

[dependencies]
anyhow = "1.0.4"
libbpf-rs = "0.23.3"
libbpf-sys = "1.4.3"
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
