[package]
name = "ebpf-demo-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya"  }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
ebpf-demo-common = { path = "../ebpf-demo-common" }
network-types = "0.0.6"

[[bin]]
name = "ebpf-demo"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
